# tws

./: .gitignore  CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  README  RevisionToVersion.txt  Romanian_translation_The_Wheat_Snooper_by_MihaiS.ts  The_Wheat_Snooper_german_by_lookias.ts  The_Wheat_Snooper_international_spanish.ts  The_Wheat_Snooper_portugues.ts  The_Wheat_Snooper_untranslated.ts  buddylist.h  buddylist.ui  buttonlayout.ui  charformatsettings.cpp  chathandler.cpp  chathandler.h  chathandlerprv.cpp  chatwindow.h  chatwindow.ui  ctcphandler.h  ctcphandleratomic.ui  ctctphandlerwidget.cpp  ctctphandlerwidget.ui  emoticonhandler.cpp  global_macros.h  hostbox.cpp  hostbox.h  hostprvbox.h  hostprvbox.ui  hoststruct.h  inihandlerclass.cpp  initextbrowser.cpp  initextbrowser.h  installation_windows.bat  ircnet.h  joinprvgame.cpp  joinprvgame.h  joinprvgame.ui  (+92 more)
The Wheat Snooper/qss/: quak4 skin by lookias.qss
The Wheat Snooper/query/: log
The Wheat Snooper/snpini/: settingswindowini  snpini  snpinifromlastquit
The Wheat Snooper/textschemes/: lastedited.textscheme
The Wheat Snooper/translations/: Romanian_translation_The_Wheat_Snooper_by_MihaiS.qm  The_Wheat_Snooper_international_spanish.qm  The_Wheat_Snooper_spanish-(of_spain)_by_kosmos.qm
TheWheatSnooper/network/: wormnet.net
TheWheatSnooper/qss/: wormnet skin by lookias.qss
TheWheatSnooper/smileys/: readme.txt  smileysini
TheWheatSnooper/snpini/: ctcp.ini
TheWheatSnooper/textschemes/: Colourful by Mazinger.textscheme  green and yellow by lookias.textscheme  wood by lookias.textscheme  wormnet by lookias.textscheme
TheWheatSnooper/translations/: The_Wheat_Snooper_untranslated.ts  _da.Danish.ts  _de.German_by_lookias.ts  _en.Standard.ts  _es.Spanish_by_eViL.qm  _es.Spanish_by_eViL.ts  _fr.French_by_LeTotalKiller.qm  _lt.Lithuanian_by_K4Tsis.qm  _lt.Lithuanian_by_K4Tsis.ts  _pt.Portugues.qm  _ru.Russian_translation_by_StepS.qm  es.Spanish_(Spain)_by_WowwoW.qm
TheWheatSnooper/wav/: Dont use this Folder for costum sounds!.txt
backup/: flaglisthandler.cpp
bld/license/: gplv2_opening.txt
bld/smileys/: Tango_by_StepS.smileyscheme
bld/textschemes/: OpenCoffee-by-Zemke.textscheme  wormnet by StepS.textscheme
branch/: netcoupler.pro
branches/league_version/: netcoupler.pro  release_script_linux.sh  release_script_windows.bat
build-files/qss/: Skin_Base
build-scripts/os2/: build.cmd  buildr.cmd
build-scripts/win/: build.cmd  buildr.cmd
php/: clantagtoadressmapping.sql  config.php
php/secretClanDB/: insert.php  textlinesForInclude.php
php/wheat/: versionupdating.php
qfileupload/: config.ui  dropwidget.cpp  dropwidget.h  qfileupload.qrc  qmainwindow.cpp
qss/: fraktal1 by lookias.qss
res/: about.html
snpini/: snpini
src/: about.cpp  about.h  about.ui  awaybox.cpp  awaybox.ui  awayhandler.cpp  awayhandler.h  balloon_handler.cpp  balloon_handler.h  buddylist.cpp  buddylist.h  buttonlayout.cpp  buttonlayout.h  buttonlayout.ui  chathandler.cpp  chathandler.h  chathandlerprv.cpp  chathandlerprv.h  chatwindow.cpp  chatwindow.h  chatwindow.ui  codecselectdia.h  codecselectdia.ui  ctcphandler.cpp  ctcphandler.h  ctcphandleratomic.ui  ctctphandlerwidget.h  database_base.cpp  emoticonhandler.h  emoticonsdialog.cpp  emoticonsdialog.h  emoticonsdialog.ui  filehistorylister.h  global_functions.cpp  global_functions.h  hostbox.cpp  hostbox.h  hostmodel.cpp  hostprvbox.cpp  hoststruct.cpp  (+49 more)
src/channel/: chanUserListMenu.ui  channeltab.cpp  channeltab.h  channeltab.ui  chanusermodel.h  hostmodel.cpp
src/irc/: irc_chatwindow.h  irc_ircnet.h  irc_netcoupler.cpp  irc_netcoupler.h  irc_usermodel.cpp  irc_usermodel.h  irc_window.cpp  irc_window.h  irc_window.ui  ircjoindia.cpp  ircjoindia.h  ircjoindia.ui
src/qfileupload/: config.cpp  qmainwindow.cpp
src/server/: servertab.cpp  servertab.h  servertab.ui
src/wormnet/: about.cpp  about.h  about.ui  awaybox.cpp  awaybox.h  awayhandler.cpp  awayhandler.h  balloon_handler.cpp  balloon_handler.h  buddylist.cpp  buddylist.h  buttonlayout.cpp  buttonlayout.h  buttonlayout.ui  channeltab.cpp  channeltab.h  channeltab.ui  charformatsettings.cpp  charformatsettings.h  chathandler.cpp  chathandler.h  chathandlerprv.cpp  chatwindow.cpp  chatwindow.h  chatwindow.ui  clantowebpagemapper.cpp  clantowebpagemapper.h  codecselectdia.cpp  combobox_wrapper.cpp  ctcphandler.cpp  ctcphandleratomic.cpp  ctcphandleratomic.h  ctctphandlerwidget.cpp  ctctphandlerwidget.h  database_base.cpp  database_base.h  emoticonhandler.cpp  emoticonsdialog.cpp  fakeObject.cpp  filehistorylister.ui  (+74 more)
stuff/: make_and_installation_windows.bat  tus-wa-groups-db-parser.php
stuff/php/: verifyDublicatedAccess.php
stuff/tus-wa-clan-db-parser/: clannames.txt  clans.php  index.php
textschemes/: wormnet by lookias.textscheme
translations/: Romanian_translation_The_Wheat_Snooper_by_MihaiS.ts  The_Wheat_Snooper_danish.ts  The_Wheat_Snooper_german_by_lookias.qm  The_Wheat_Snooper_german_by_lookias.ts  The_Wheat_Snooper_portugues.qm  The_Wheat_Snooper_spanish-(of_spain)_by_kosmos.ts  The_Wheat_Snooper_untranslated.qm  The_Wheat_Snooper_untranslated.ts  _da.Danish.ts  _de.German_by_lookias.qm  _de.German_by_lookias.ts  _en.Standard.qm  _en.Standard.ts  _es.Spanish_by_eViL.ts  _fr.French_by_LeTotalKiller.ts  _lt.Lithuanian_by_K4Tsis.ts  _pl.Polish_by_CzAjNiK.qm  _pl.Polish_by_CzAjNiK.ts  _pl.Polish_by_CzAjNiK_and_ZexorZ.ts  _pt.Portugues.ts  _ro.Romanian_by_MihaiS.qm  _ro.Romanian_by_MihaiS.ts  _ru.Russian_translation_by_StepS.ts  es.Spanish_(Spain)_by_WowwoW.ts  french.ts  portuguese.ts
trunk/: RevisionToVersion.txt  installation_windows.bat  make_betapackage_windows.bat  make_package_windows.bat  netcoupler.pro  pictureResource.qrc  release_INSTALL_README.txt  release_script_windows.bat  rename_beta_windows.bat  setup win32.nsi
trunk/backup/: flaglisthandler.cpp
trunk/php/: download.php
trunk/src/: about.cpp  about.h  awaybox.cpp  balloon_handler.cpp  balloon_handler.h  buttonlayout.cpp  chathandler.cpp  (+44 more)
tutorial/: 01.txt  03.txt  04.txt  05.txt  06.txt  07.txt
(+238 files in other folders)
